# multiplayer-phase-10

./: .env.example  .gitignore  README.md  docker-compose.yml  game-service.postman_collection.json  player-service.postman_collection.json  service-discovery.postman_collection.json
services/multiplayer-phase-10-game-service/: Cargo.toml  Dockerfile  pyvenv.cfg  requirements.txt
services/multiplayer-phase-10-game-service/src/: cache.py  consts.py  database.py  elk.py  game_service.py  game_session.py  gateway_client.py  main.py  main.rs  player_instance.py  player_service_client.py  service.py  subscribe.py  utils.py
services/multiplayer-phase-10-game-service/src/query/: create_table_game_logs.sql  create_table_game_sessions.sql
services/multiplayer-phase-10-gateway/: Dockerfile  package-lock.json  package.json
services/multiplayer-phase-10-gateway/proto/: servicediscovery.proto
services/multiplayer-phase-10-gateway/src/: app.module.ts
services/multiplayer-phase-10-player-service/: .gitignore  Dockerfile  pyvenv.cfg  requirements.txt
services/multiplayer-phase-10-player-service/src/: cache.py  consts.py  database.py  elk.py  main.py  service.py  subscribe.py
services/multiplayer-phase-10-service-discovery/: Dockerfile  package-lock.json  package.json
services/multiplayer-phase-10-service-discovery/api/: service-discovery.proto
services/multiplayer-phase-10-service-discovery/proto/: servicediscovery.proto
services/multiplayer-phase-10-service-discovery/src/: app.module.ts  main.ts
tests/: pyvenv.cfg  test.py
(+33 files in other folders)
