[package]
name = "multiplayer-phase-10-game-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4.1"
actix-files = "0.6"
env_logger = "0.9"
log = "0.4"

[dev-dependencies]
actix-test = "0.1"
futures-util = "0.3"